# kde1

./: .gitignore  README.md
kdeadmin-1.1.2/: Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  kdeadmin.spec.in  subdirs
kdeadmin-1.1.2/bsd-port/: Makefile  kde-snapshot.mk
kdeadmin-1.1.2/debian/: README.debian  changelog  conffiles  control  copyright  menu.in  rules  undocumented
kdeadmin-1.1.2/kdat/: Archive.cpp  Archive.h  ArchiveInfoWidget.cpp  ArchiveInfoWidget.h  BackupDlg.cpp  BackupDlg.h  BackupOptDlg.cpp  BackupOptDlg.h  BackupProfile.cpp  BackupProfile.h  BackupProfileInfoWidget.cpp  BackupProfileInfoWidget.h  BackupProfileManager.cpp  BackupProfileManager.h  BackupProfileWidget.cpp  BackupProfileWidget.h  File.cpp  File.h  FileInfoWidget.cpp  FileInfoWidget.h  FormatOptDlg.cpp  FormatOptDlg.h  ImageCache.cpp  ImageCache.h  IndexDlg.cpp  IndexDlg.h  InfoShellWidget.cpp  InfoShellWidget.h  KDat.cpp  KDat.h  KDat.kdoc  LoggerWidget.cpp  LoggerWidget.h  Makefile.am  Makefile.in  Node.cpp  Node.h  Options.cpp  Options.h  OptionsDlg.cpp  (+42 more)
kdeadmin-1.1.2/ksysv/: AUTHORS  About.cpp  About.h  BUGS  CHANGES  Clipboard.cpp  Clipboard.h  Constants.h  Content.cpp  Content.h  Data.cpp  Data.h  DragList.cpp  DragList.h  DragListCanvas.cpp  DragListCanvas.h  IOCore.cpp  IOCore.h  Makefile.am  Makefile.in  OldView.cpp  OldView.h  PropDlg.cpp  PropDlg.h  README  ReadOnlyDragList.cpp  ReadOnlyDragList.h  TODO  TopWidget.cpp  TopWidget.h  ViewPort.cpp  ViewPort.h  error.cpp  error.h  ksv_conf.cpp  ksv_conf.h  ksv_core.cpp  ksv_core.h  ksv_ipc.h  ksysv.kdelnk  (+13 more)
kdeadmin-1.1.2/kuser/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  THANKS  TODO  addUser.cpp  addUser.h  editDefaults.cpp  editDefaults.h  editGroup.cpp  editGroup.h  editGroupData.cpp  editGroupData.h  globals.h  grpnamedlg.cpp  grpnamedlg.h  kdatectl.cpp  kdatectl.h  kerror.cpp  kerror.h  kgroup.cpp  kgroup.h  kgrouptbl.cpp  kgrouptbl.h  kgroupvw.cpp  kgroupvw.h  kheader.cpp  kheader.h  krowtable.cpp  krowtable.h  kuser.cpp  kuser.h  kuser.kdelnk  kusertbl.cpp  kusertbl.h  kuservw.cpp  kuservw.h  large-kuser.xpm  (+21 more)
kdeadmin-1.1.2/po/: Makefile.am  Makefile.in  kdat.pot  ksysv.pot  kuser.pot
kdegames-1.1.2/kabalone/: AbTop.cpp  AbTop.h  Board.cpp  Board.h  BoardWidget.cpp  BoardWidget.h  CHANGES  ChangeLog  Makefile.am  Makefile.in  Move.cpp  Move.h  README  Spy.cpp  Spy.h  TODO  kabalone-1.02.lsm  kabalone.cpp  kabalone.kdelnk  kabalone.xpm  large-kabalone.xpm  mini-kabalone.xpm  version.h
kdegames-1.1.2/kasteroids/: ChangeLog  Makefile.am  Makefile.in  README  bg.ppm  kasteroids.kdelnk  kasteroids.xpm  kfixedtopwidget.cpp  large-kasteroids.xpm  main.cpp  mini-kasteroids.xpm  sprites.h  toplevel.cpp  toplevel.h  version.h  view.cpp  view.h
kdegames-1.1.2/kpoker/: CHANGES  DESCRIPTION  Makefile.am  Makefile.in  README  TODO  defines.h  global.h  kpaint.cpp  kpaint.h  kpoker.cpp  kpoker.h  kpoker.kdelnk  kpoker.xpm  large-kpoker.xpm  main.cpp  mini-kpoker.xpm  top.cpp  top.h  version.h
kdegames-1.1.2/ksame/: ChangeLog  HighScore.cpp  HighScore.h  KSameWidget.cpp  KSameWidget.h  Makefile  Makefile.am  Makefile.in  StoneWidget.cpp  StoneWidget.h  ksame.kdelnk  ksame.xpm  large-ksame.xpm  main.cpp  mini-ksame.xpm  version.h
kdegames-1.1.2/ksirtet/: CHANGELOG  LICENSE.readme  Makefile.am  Makefile.in  README  README.original  TODO  board.cpp  board.h  dbutton.cpp  dbutton.h  defines.h  dialogs.cpp  dialogs.h  field.cpp  field.h  ggboard.cpp  ggboard.h  gtboard.cpp  gtboard.h  gtetris.cpp  gtetris.h  ksirtet-1.0.0.lsm  main.cpp  main.h  net.cpp  net.h  spiece.cpp  spiece.h  tpiece.cpp  tpiece.h  version.h
kdegames-1.1.2/ksmiletris/: COPYRIGHT  Makefile.am  Makefile.in  README  gamewidget.cpp  gamewidget.h  gamewindow.cpp  gamewindow.h  ksmiletris.h  ksmiletris.kdelnk  ksmiletris.xpm  large-ksmiletris.xpm  main.cpp  mini-ksmiletris.xpm  mirrorwidget.cpp  mirrorwidget.h  newscoredialog.cpp  newscoredialog.h  npiecewidget.cpp  npiecewidget.h  scoredialog.cpp  screenwidget.cpp  screenwidget.h
kdegames-1.1.2/ksnake/: ChangeLog  Makefile.am  Makefile.in  README  ball.cpp  ball.h  basket.cpp  basket.h  bitmaps.h  board.cpp  board.h  game.cpp  game.h  keys.cpp  keys.h  ksnake-0.2.lsm  ksnake.kdelnk  ksnake.xpm  large-ksnake.xpm  lcdrange.cpp  level.cpp  level.h  levels.cpp  levels.h  mini-ksnake.xpm  pixServer.cpp  pixServer.h  progress.cpp  progress.h  rattler.cpp  rattler.h  score.cpp  score.h  snake.cpp  snake.h  startroom.cpp  startroom.h  trys.cpp  trys.h  version.h  (+2 more)
kdegames-1.1.2/po/: Makefile.am  Makefile.in  kabalone.pot  kasteroids.pot  kblackbox.pot  kmahjongg.pot  kmines.pot  konquest.pot  kpat.pot  kpoker.pot  kreversi.pot  ksame.pot  kshisen.pot  ksirtet.pot  ksmiletris.pot  ksnake.pot  ksokoban.pot
kdegraphics-1.1.2/kfax/: ChangeLog  KFax.kdelnk  Makefile.am  Makefile.in  README  TODO  about.cpp  about.h  fax-g3.kdelnk  fax2ps.c  fax2tiff.c  faxexpand.cpp  faxexpand.h  faxinput.cpp  g3hack.cpp  kfax.cpp  kfax.h  kfax.tif  kfax.xpm  kfaxlogo.xpm  large-kfax.xpm  mini-kfax.xpm  options.cpp  options.h  print.cpp  print.h  tiff2ps.c  urldlg.cpp  urldlg.h  version.h  viewfax.cpp
kdegraphics-1.1.2/kfract/: BUGS  ChangeLog  Makefile.am  Makefile.in  README  TODO  drawview.C  drawview.h  fract.C  fract.h  index.html  julia.C  julia.h  kfract-0.1.2.lsm  kfract.C  kfract.h  kfract.kdelnk  kfract.xpm  kfractdlgs.C  kfractdlgs.h  lambda.C  lambda.h  large-kfract.xpm  main.C  mandel.C  mandel.h  mini-kfract.xpm  praeambel  version.h
kdegraphics-1.1.2/kghostview/: ChangeLog  Makefile.am  Makefile.in  README  TODO  copyright.cpp  copyright.h  goto.cpp  goto.h  info.cpp  info.h  interpreter.cpp  interpreter.h  kghostview.cpp  kghostview.h  kghostview.kdelnk  kghostview.xpm  kpswidget.cpp  kpswidget.h  large-kghostview.xpm  main.cpp  main.h  marklist.cpp  (+12 more)
kdesupport-1.1.2/: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  jsinclude.m4.in  kdesupport.spec.in
(+7198 files in other folders)
