
SUBDIRS = br ca cs de da nl ru sv it hu pl es pt fr hr fi zh_TW.Big5 sk el \
	no zh_CN.GB2312 mk pt_BR eo is ko tr hs ja sl

APPS = kdvi kfax kghostview kiconedit kpaint kview kfract ksnapshot

merge:
	@apps='$(APPS)'; \
	langs='$(SUBDIRS)'; \
	for cat in $$apps; do \
	  echo $$cat; \
	  for lang in $$langs; do \
	    echo $$lang/$$cat ; \
	    if test -r $$lang/$$cat.po; then \
	      echo $$lang; \
	      msgmerge -o $$cat.new $$lang/$$cat.po $$cat.pot; \
	      if test -s $$cat.new && diff $$lang/$$cat.po $$cat.new; then \
	        rm $$cat.new;  \
 	      else  \
		mv $$cat.new $$lang/$$cat.po ; \
	    fi; \
	  fi ;\
         done ;\
	done

messages:
